--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -26,6 +26,7 @@ required = ["sigs.k8s.io/testing_frameworks/integration",
             "k8s.io/apiextensions-apiserver/pkg/apis/apiextensions/v1beta1",
             "k8s.io/apiextensions-apiserver/pkg/client/clientset/clientset",
             "github.com/prometheus/client_golang/prometheus",
+            "k8s.io/code-generator/cmd/deepcopy-gen",
             ]
 
 [[constraint]]
